# python-hatch-template

./: .gitignore  LICENSE.txt  README.md  mkdocs.yml  pyproject.toml
docs/: index.md
python_hatch_template/: __about__.py  __init__.py
